#
# No such files.
# Copy h5 files to binary dir
#file(GLOB_RECURSE all_h5_ref_files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.ref.h5)
#foreach(file ${all_h5_ref_files})
  #configure_file(${file} ${file} COPYONLY)
#endforeach()

# List of all tests
set(all_tests interface archive h5_storable_test issue_multifile)

# Build the h5_storable C++ module
Python_add_library(h5_storable MODULE "h5_storable.$<IF:$<TARGET_EXISTS:clair::c2py_plugin>,cpp,wrap.cxx>")
target_link_libraries(h5_storable PRIVATE h5_c c2py::c2py $<TARGET_NAME_IF_EXISTS:clair::c2py_plugin>)
target_include_directories(h5_storable PRIVATE   ${CMAKE_CURRENT_SOURCE_DIR})

foreach(test ${all_tests})
  get_filename_component(test_name ${test} NAME_WE)
  get_filename_component(test_dir ${test} DIRECTORY)
  add_test(NAME Py_${test_name} COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${test_dir}/${test_name}.py WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${test_dir})
  set_property(TEST Py_${test_name} APPEND PROPERTY ENVIRONMENT PYTHONPATH=${PROJECT_BINARY_DIR}/python:${h5_BINARY_DIR}/python:${CMAKE_CURRENT_BINARY_DIR}:$ENV{PYTHONPATH} ${SANITIZER_RT_PRELOAD})
endforeach()


